Archive2/aa/da13354327ba6f/output
g++ (GCC) 5.2.0
main.cpp: In function 'int main()':
main.cpp:12:28: error: 'ctime_s' was not declared in this scope
     e = ctime_s( s, 50, &t ); // *** error: 'ctime_s' was not declared in this scope                             // 
                            ^
bash: line 7: main.cpp: command not found
